# Leaf-doctor

./: README.md  create_test_image.py  package-lock.json  package.json  plant_demo.py  plant_disease_detection.py  pyproject.toml  requirements.txt  streamlit_app.py  vite.config.ts  web_app.py
attached_assets/: content-1745018831026.md  content-1745022148660.md  content-1749781786775.md
client/: index.html
client/src/: App.tsx  index.css
client/src/components/: AboutSection.tsx  DiagnosisDetail.tsx  Footer.tsx  Header.tsx  HeroSection.tsx  HistorySummary.tsx  HowItWorksSection.tsx  IconGuides.tsx  OfflineNotification.tsx  OnboardingTour.css  OnboardingTour.tsx  PremiumFeature.tsx  ResultsSection.tsx  SimpleOnboarding.tsx  StatsSection.tsx  SubscriptionCard.tsx  TestimonialsSection.tsx  TooltipHelper.tsx  UploadSection.tsx  VoiceAssistantModal.tsx
client/src/hooks/: use-auth.tsx  use-image-upload.tsx
client/src/lib/: offlineStorage.ts
client/src/pages/: analytics-dashboard.tsx  auth-page.tsx  checkout.tsx  diagnosis-history.tsx  home-page.tsx  landing-page.tsx  subscribe-checkout.tsx  subscription.tsx
server/: auth.ts  index.ts  openai.ts  plantDiseaseModel.ts  routes.ts  storage.ts  vite.ts
shared/: newsletter-schema.ts  schema.ts
templates/: index.html
